Mobile UI fixes
* Fixed course pickers too small activation area, adjusted paddings of
said application-list__item.course in a way that item-header is bigger
in course picker now
* Fixed 320 width resolution issues in discussions thread listing view

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
@@ -280,8 +280,17 @@
 }
 
 // Coursepicker
+.application-list__item-header--course {
+  cursor: pointer;
+  padding: 14px 0;
+} 
+
 .application-list__item-body--course {
-  padding: 12px 0;
+  padding: 0 0 12px;
+}
+
+.application-list__item-footer--course {
+  padding: 0 0 14px;
 }
 
 // Guider
