--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/text.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/text.scss
@@ -519,10 +519,14 @@ b {
   align-items: center;
   display: flex;
   flex-flow: row nowrap;
+  flex-grow: 1;
   font-size: 0.8125rem;
   justify-content: flex-end;
   text-align: right;
-  width: 250px;
+  
+  @include breakpoint($breakpoint-mobile-xl) {
+    width: 250px;
+  }
 }
 
 .text--discussion-thread-item-title {
